# mirror-test

./: README.md  docker-compose.yaml
mirror-test-app/: .env.template  Dockerfile  docker-entrypoint.sh  main.py  pyproject.toml
mirror-test-app/alembic/versions/: 2024_11_24_2242-423d28a926b3_create_dog_walker_and_order_model.py  2024_11_24_2340-3b5fa0b6cff3_сreate_test_data.py
mirror-test-app/api/: __init__.py
mirror-test-app/api/api_v1/: __init__.py  orders.py
mirror-test-app/core/: config.py
mirror-test-app/core/models/: __init__.py  base.py  db_helper.py  dog_walker.py  order.py
mirror-test-app/core/schemas/: dog_walker.py  order.py
mirror-test-app/crud/: order.py
